[tool.poetry]
name = "temporal"
version = "0.1.0"
description = ""
authors = ["Nicolas Zermati <nicoolas25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
